--- a/resources/en.locale/Localized.strings
+++ b/resources/en.locale/Localized.strings
@@ -308,3 +308,5 @@ notification_mobile_unit.unit4=Unit 4
 dashboard.remote_google_login_label=Google account
 
 timeline=Timeline
+message.email.account_created.subject=Account was created
+message.email.account_created.body=Hi {0}.\n\nRegistration completed. Your account is already active, so you can log in and use your social security number as the username and password you chose yourself.
