--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -312,3 +312,7 @@ notification_mobile_unit.unit4=Unit 4
 dashboard.remote_google_login_label=Google account
 
 timeline=Timeline
+
+2_step_auth_email.subject=Login verification {0}
+2_step_auth_email.body=<strong>Login Verification {0}</strong><br /><br />Your verification code:<br /><br /><span><strong>{1}</strong></span><br /><br />The verification code will be valid for {2} minutes. Please do not share this code with anyone.
+
