--- a/resources/en.locale/Localized.strings
+++ b/resources/en.locale/Localized.strings
@@ -313,3 +313,9 @@ message.email.account_created.body=Hi {0}.\n\nRegistration completed. Your accou
 message.email.account_created.body_user_name_as_email=Hi {0}.\n\nRegistration completed. Your account is already active, so you can log in with your user name and the password you chose yourself.
 message.password_remind.success=It succeeded! We have sent instructions at the email {0} so you can reset your password
 message.email.password_remind.body=Hi {0}.\n\nA new password for {1} has been requested in the {2} database. To set a new password, it is necessary to open the following URL (the URL must be inserted as one continuous line in the browser):\n\n{3}\n\nThis URL is active for 1 day after the request was received, after having to repeat the password change request.
+
+2_step_auth_email.subject=Login verification {0}
+2_step_auth_email.body=<strong>Login Verification {0}</strong><br /><br />Your verification code:<br /><br /><span><strong>{1}</strong></span><br /><br />The verification code will be valid for {2} minutes. Please do not share this code with anyone.
+
+
+
